# DataAnalysis_scooter_sharing_GoFast

./: LICENSE  README.md  pyproject.toml
data/: cleaned_rides_go.csv  cleaned_rides_users_subscriptions_go.csv  cleaned_users_go.csv
notebooks/: DataChecking.ipynb  DataCleaning.ipynb  EDA.ipynb
utils/: EDA.py  __init__.py  overview.py  paths.py  vizualization.py
